Bug 1219833 - Respect composition underline color; r=masayuki, a=sylvestre nsTextFrame didn't use the composition underline color if the composition didn't have a foreground color defined. This patch makes it use the underline color if foreground color is not defined.